feat: Add Figma to Elementor export plugin with UI and conversion pipeline.

--- a/src/ui.html
+++ b/src/ui.html
@@ -1485,6 +1485,10 @@
       </section>
 
       <section class="tab-panel" data-panel="help">
+        <!-- Nomenclature Guide -->
+
+
+        <!-- Widget Search -->
         <div class="search-box">
           <input type="text" id="widget-search" class="search-input"
             placeholder="Buscar widget (ex: button, woo, pro)..." autocomplete="off" />
@@ -2219,6 +2223,20 @@
         'WordPress': [
           'w:wp-search', 'w:wp-recent-posts', 'w:wp-recent-comments', 'w:wp-archives', 'w:wp-categories',
           'w:wp-calendar', 'w:wp-tag-cloud', 'w:wp-custom-menu'
+        ],
+        'Nomenclatura Hierárquica': [
+          // Accordion
+          'accordion:item', 'accordion:title', 'accordion:content', 'accordion:icon',
+          // Tabs
+          'tabs:item', 'tabs:title', 'tabs:content',
+          // Icon List
+          'list:item', 'list:icon', 'list:text',
+          // Carousel
+          'slide:1', 'slide:2', 'carousel:slide',
+          // Countdown
+          'countdown:days', 'countdown:hours', 'countdown:minutes', 'countdown:seconds',
+          // Toggle
+          'toggle:item', 'toggle:title', 'toggle:content',
         ]
       };
 
